--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/willbarkoff/foodie#readme",
   "devDependencies": {
+    "@types/apple-mapkit-js": "^5.50.0",
+    "@types/mapbox-gl": "^1.12.5",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
@@ -40,7 +42,6 @@
     "@fortawesome/react-fontawesome": "^0.1.12",
     "bulma": "^0.9.1",
     "intl-relative-time-format": "^1.0.7",
-    "mapbox-gl": "^1.12.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
