--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,11 @@
 		"moduleResolution": "node",
 		"target": "es5",
 		"allowJs": true,
-		"jsx": "react"
+		"jsx": "react",
+		"allowSyntheticDefaultImports": true
 	},
 	"include": [
 		"./src/**/*"
 	]
+	
 }
