--- a/package.json
+++ b/package.json
@@ -20,11 +20,9 @@
   },
   "homepage": "https://github.com/willbarkoff/foodie#readme",
   "devDependencies": {
-    "@types/apple-mapkit-js": "^5.50.0",
-    "@types/mapbox-gl": "^1.12.5",
     "@types/node": "^14.14.6",
-    "@types/react": "^16.9.55",
-    "@types/react-dom": "^16.9.9",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
@@ -42,8 +40,10 @@
     "@fortawesome/react-fontawesome": "^0.1.12",
     "bulma": "^0.9.1",
     "intl-relative-time-format": "^1.0.7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "leaflet": "^1.9.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.0",
     "react-router-dom": "^5.2.0"
   }
 }
